<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="btn_red">Red </string>
    <string name="btn_yellow">Yellow </string>
    <string name="btn_green">Green </string>
    <string name="Info_text">Info Text</string>
    <string name="tv_info_text">Info Text</string>
    <string name="info_text">Info Text</string>
    <string name="tab_on_the_buttons_to_play">Tab on the buttons to play</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
</resources>